--- a/index.html
+++ b/index.html
@@ -3,11 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mern- ALL TASKS</title>
+    <style>
+        table{
+        width : 70%;
+        margin-right:auto;
+        margin-left: auto;
+        }
+        td{
+            padding : 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Name- Aman Jadon</h1>
-    <h1>Slot- 11:30- 1:30</h1>
-    
+    <h1>22BCE7918</h1>
+    <h1>Name-Aman Jadon</h1> 
+    <h1>Slot-11:30-1:30</h1>
+    <table border="1">
+        <tr>
+            <th colspan = "2">HTML TASKS</th>
+        </tr>
+        <tr>
+            <td>TASK1</td>
+            <td><a href="Task1.html">Html-Task1</a></td>
+        </tr>
+        <tr>
+            <td>TASK2</td>
+            <td><a href="Task2.html">Html-Task2</a></td>
+        </tr>
+        <tr>
+            <td>TASK3</td>
+            <td><a href="Task3.html">Html-Task3</a></td>
+        </tr>
+        <tr>
+            <td>TASK4</td>
+            <td><a href="Task4.html">Html-Task4</a></td>
+        </tr>
+        <tr>
+            <td>TASK5</td>
+            <td><a href="Task5.html">Html-Task5</a></td>
+        </tr>
+        <tr>
+            <th colspan = "2">CSS TASKS</th>
+        </tr>
+        <tr>
+            <td>TASK1</td>
+            <td><a href="css/task1.html">Css-Task1</a></td>
+        </tr>
+        <tr>
+            <td>TASK2</td>
+            <td><a href="css/task2.html">Css-Task2</a></td>
+        </tr>
+        <tr>
+            <td>TASK3</td>
+            <td><a href="css/task2b.html">Css-Task3</a></td>
+        </tr>
+        <tr>
+            <td>TASK4</td>
+            <td><a href="css/task3.html">Css-Task4</a></td>
+        </tr>
+        <tr>
+            <td>TASK5</td>
+            <td><a href="css/task4.html">Css-Task5</a></td>
+        </tr>
+        <tr>
+            <td>TASK6</td>
+            <td><a href="css/task5.html">Css-Task6</a></td>
+        </tr>
+        <tr>
+            <td>TASK7</td>
+            <td><a href="css/task6.html">Css-Task7</a></td>
+        </tr>
+        <tr>
+            <td>TASK8</td>
+            <td><a href="css/task7.html">Css-Task7</a></td>
+        </tr>
+    </table>
 </body>
 </html>
