--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -17,51 +17,51 @@
 </head>
 <body>
     <h1>22BCE7221</h1>
-    <h1>Name-Ankit Saha</h1> 
+    <h1>Name-Aman Jadon</h1> 
     <h1>Slot-11:30-1:30</h1>
     <table border="1">
         <h2>javascript and bootstrap</h2>
         <tr>
             <td>TASK1</td>
             <td>
-                <a href="Bs_task1.html">BS-Task1</a>
+                <a href="bstask1.html">BS-Task1</a>
             </td>
         </tr>
         <tr>
             <td>TASK2</td>
             <td>
-                <a href="Bs_task2.html">BS-Task2</a>
+                <a href="bstask2.html">BS-Task2</a>
             </td>
         </tr>
         <tr>
             <td>TASK3</td>
             <td>
-                <a href="Bs_task3.html">BS-Task3</a>
+                <a href="bstask3.html">BS-Task3</a>
             </td>
         </tr>
         <tr>
             <td>TASK4</td>
             <td>
-                <a href="Bs_task4.html">BS-Task4</a>
+                <a href="bstask4.html">BS-Task4</a>
             </td>
         </tr>
         <tr>
             <td>TASK5</td>
             <td>
-                <a href="Bs_task5.html">BS-Task5</a>
+                <a href="bstask5.html">BS-Task5</a>
             </td>
         </tr>
         <tr>
             <td>TASK6</td>
             <td>
-                <a href="Bs_task6.html">BS-Task6</a>
+                <a href="bstask6.html">BS-Task6</a>
             </td>
         </tr>
         <h2>javascript task</h2>
         <tr>
             <td>Javascript TASK1</td>
             <td>
-                <a href="./Js_task1.html">js-task1</a>
+                <a href="Javascript/jstask1.html">js-task1</a>
             </td>
         </tr>
         <tr>
