--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -66,37 +66,37 @@
         </tr>
         <tr>
             <td>Javascript TASK2
-            <a href="./Js_task2.html">js-task2</a>
+            <a href="Javascript/jstask2.html">js-task2</a>
         </td>
         </tr>
         <tr>
             <td>Javascript TASK3
-            <a href="./Js_task3.html">js-task3</a>
+            <a href="Javascript/jstask3.html">js-task3</a>
         </td>
         </tr>
         <tr>
             <td>Javascript TASK4
-            <a href="./Js_task4.html">js-task4</a>
+            <a href="Javascript/jstask4.html">js-task4</a>
         </td>
         </tr>
         <tr>
             <td>Javascript TASK5
-            <a href="./Js_task5.html">js-task5</a>
+            <a href="Javascript/jstask5.html">js-task5</a>
         </td>
         </tr>
         <tr>
             <td>Javascript TASK6
-            <a href="./Js_task6.html">js-task6</a>
+            <a href="Javascript/jstask6.html">js-task6</a>
         </td>
         </tr>
         <tr>
             <td>Javascript TASK7
-            <a href="./Js_task7.html">js-task7</a>
+            <a href="Javascript/jstask7.html">js-task7</a>
         </td>
         </tr>
         <tr>
             <td>Javascript TASK8
-            <a href="./Js_task8.html">js-task8</a>
+            <a href="Javascript/jstask8.html">js-task8</a>
         </td>
         </tr>
 
