--- a/Bootstrap/bstask2.html
+++ b/Bootstrap/bstask2.html
@@ -57,9 +57,9 @@
     <div class="container-fluid bg-warning">
         <div class="row px-4">
             <h1 class="col-6 px-4">Builderz</h1>
-            <a href="#" class="col-2"><img src="./images/opening hour.png"></a>
-            <a href="#" class="col-2"><img src="./images/call us.png"></a>
-            <a href="#" class="col-2"><img src="./images/email us.png"></a>
+            <a href="#" class="col-2"><img src="./images/images/opening hour.png"></a>
+            <a href="#" class="col-2"><img src="./images/images/call us.png"></a>
+            <a href="#" class="col-2"><img src="./images/images/email us.png"></a>
         </div>
         <div class="row mx-4 py-3" id = "navbar">
             <ul class="col-10">
@@ -80,24 +80,24 @@
             <button class = "col-1 btn btn-outline-light"> Get A Quote</button>
         </div>
     </div>
-    <img src="./images/center image.png" class="img-fluid" alt="...">
+    <img src="./images/images/center image.png" class="img-fluid" alt="...">
     <div class="row">
         <div class="card col-4 ">
-            <img src="./images/ logo.png" class="card-img-top" alt="middle">
+            <img src="./images/images/ logo.png" class="card-img-top" alt="middle">
             <div class="card-body" id="left">
               <h3 class="card-title text-warning">Expert Worker</h5>
               <p class="card-text text-warning">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsum atque.</p>           
             </div>
         </div>
         <div class="card col-4">
-            <img src="./images/middle logo.png" class="card-img-top" alt="middle">
+            <img src="./images/images/middle logo.png" class="card-img-top" alt="middle">
             <div class="card-body bg-warning" id="left">
               <h3 class="card-title ">Quality work</h5>
               <p class="card-text ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsum atque.</p>           
             </div>
         </div>
         <div class="card col-4">
-            <img src="./images/right logo.png" class="card-img-top" alt="middle">
+            <img src="./images/images/right logo.png" class="card-img-top" alt="middle">
             <div class="card-body" id="left">
               <h3 class="card-title text-warning">24/7 support</h5>
               <p class="card-text text-warning">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsum atque.</p>           
