--- a/Bootstrap/bstask4.html
+++ b/Bootstrap/bstask4.html
@@ -24,7 +24,7 @@
     <hr>
     <div class="row mx-auto ">
         <div class="card col-lg-3 col-md-6">
-            <img class="card-img-top" src="./images/first card.png" alt="Card image cap">
+            <img class="card-img-top" src="MERN/images/images/first card.png" alt="Card image cap">
             <div class="card-body">
                 <p>Cards for display in portfolio style material design by google</p>
                 <hr>
@@ -33,7 +33,7 @@
             </div>
           </div>
         <div class="card col-lg-3 col-md-6">
-            <img class="card-img-top" src="./images/material card.png" alt="Card image cap">
+            <img class="card-img-top" src="MERN/images/images/material card.png" alt="Card image cap">
             <div class="card-body">
                 <p>Cards for display in portfolio style material design by google</p>
                 <hr>
@@ -42,7 +42,7 @@
             </div>
           </div>
         <div class="card col-lg-3 col-md-6">
-            <img class="card-img-top" src="./images/material card.png" alt="Card image cap">
+            <img class="card-img-top" src="MERN/images/images/material card.png" alt="Card image cap">
             <div class="card-body">
                 <p>Cards for display in portfolio style material design by google</p>
                 <hr>
@@ -51,7 +51,7 @@
             </div>
           </div>
         <div class="card col-lg-3 col-md-6">
-            <img class="card-img-top" src="./images/material card.png" alt="Card image cap">
+            <img class="card-img-top" src="MERN/images/images/material card.png" alt="Card image cap">
             <div class="card-body">
                 <p>Cards for display in portfolio style material design by google</p>
                 <hr>
