--- a/Bootstrap/bstask4.html
+++ b/Bootstrap/bstask4.html
@@ -24,7 +24,7 @@
     <hr>
     <div class="row mx-auto ">
         <div class="card col-lg-3 col-md-6">
-            <img class="card-img-top" src="MERN/images/images/first card.png" alt="Card image cap">
+            <img class="card-img-top" src="https://github.com/amanjadon315/MERN/blob/main/images/images/first%20card.png" alt="Card image cap">
             <div class="card-body">
                 <p>Cards for display in portfolio style material design by google</p>
                 <hr>
