--- a/Bootstrap/bstask2.html
+++ b/Bootstrap/bstask2.html
@@ -57,7 +57,7 @@
     <div class="container-fluid bg-warning">
         <div class="row px-4">
             <h1 class="col-6 px-4">Builderz</h1>
-            <a href="#" class="col-2"><img src="./images/images/opening hour.png"></a>
+            <a href="#" class="col-2"><img src="images/images/opening hour.png"></a>
             <a href="#" class="col-2"><img src="./images/images/call us.png"></a>
             <a href="#" class="col-2"><img src="./images/images/email us.png"></a>
         </div>
