--- a/Bootstrap/bstask2.html
+++ b/Bootstrap/bstask2.html
@@ -57,9 +57,9 @@
     <div class="container-fluid bg-warning">
         <div class="row px-4">
             <h1 class="col-6 px-4">Builderz</h1>
-            <a href="#" class="col-2"><img src="./images/opening hour.png"></a>
-            <a href="#" class="col-2"><img src="./images/call us.png"></a>
-            <a href="#" class="col-2"><img src="./images/email us.png"></a>
+            <a href="#" class="col-2"><img src="images/opening hour.png"></a>
+            <a href="#" class="col-2"><img src="images/call us.png"></a>
+            <a href="#" class="col-2"><img src="images/email us.png"></a>
         </div>
         <div class="row mx-4 py-3" id = "navbar">
             <ul class="col-10">
