--- a/bs-and-js-task/index.html
+++ b/bs-and-js-task/index.html
@@ -16,8 +16,8 @@
     </style>
 </head>
 <body>
-    <h1>22BCE7918</h1>
-    <h1>Name-Aman Jadon</h1> 
+    <h1>22BCE7221</h1>
+    <h1>Name-Ankit Saha</h1> 
     <h1>Slot-11:30-1:30</h1>
     <table border="1">
         <h2>javascript and bootstrap</h2>
