--- a/index.html
+++ b/index.html
@@ -88,37 +88,37 @@
         <tr>
           <td>Task-1</td>
           <td>
-            <a href="./Bootstrap task/bootstrap_task-1.html" target="_blank">Link-1</a>
+            <a href="Bootstrap task/bootstrap_task-1.html" target="_blank">Link-1</a>
           </td>
         </tr>
         <tr>
           <td>Task-2</td>
           <td>
-            <a href="./Bootstrap task/bootstrap_task-2.html" target="_blank">Link-2</a>
+            <a href="Bootstrap task/bootstrap_task-2.html" target="_blank">Link-2</a>
           </td>
         </tr>
         <tr>
           <td>Task-3</td>
           <td>
-            <a href="./Bootstrap task/bootstrap_task-3.html" target="_blank">Link-3</a>
+            <a href="Bootstrap task/bootstrap_task-3.html" target="_blank">Link-3</a>
           </td>
         </tr>
         <tr>
           <td>Task-4</td>
           <td>
-            <a href="./Bootstrap task/bootstrap_task-4.html" target="_blank">Link-4</a>
+            <a href="Bootstrap task/bootstrap_task-4.html" target="_blank">Link-4</a>
           </td>
         </tr>
         <tr>
           <td>Task-5</td>
           <td>
-            <a href="./Bootstrap task/bootstrap_task-5.html" target="_blank">Link-5</a>
+            <a href="Bootstrap task/bootstrap_task-5.html" target="_blank">Link-5</a>
           </td>
         </tr>
         <tr>
           <td>Task-6</td>
           <td>
-            <a href="./Bootstrap task/bootstrap_task-6.html" target="_blank">Link-6</a>
+            <a href="Bootstrap task/bootstrap_task-6.html" target="_blank">Link-6</a>
           </td>
         </tr>
         
