--- a/index.html
+++ b/index.html
@@ -124,49 +124,49 @@
         <tr>
           <td>Task-1</td>
           <td>
-            <a href="JavaScript/JS_Task-1.html" target="_blank">Link-1</a>
+            <a href="Javascript/JS_Task-1.html" target="_blank">Link-1</a>
           </td>
         </tr>
         <tr>
           <td>Task-2</td>
           <td>
-            <a href="JavaScript/JS_Task-2.html" target="_blank">Link-2</a>
+            <a href="Javascript/JS_Task-2.html" target="_blank">Link-2</a>
           </td>
         </tr>
         <tr>
           <td>Task-3</td>
           <td>
-            <a href="JavaScript/JS_Task-3.html" target="_blank">Link-3</a>
+            <a href="Javascript/JS_Task-3.html" target="_blank">Link-3</a>
           </td>
         </tr>
         <tr>
           <td>Task-4</td>
           <td>
-            <a href="JavaScript/JS_Task-4.html" target="_blank">Link-4</a>
+            <a href="Javascript/JS_Task-4.html" target="_blank">Link-4</a>
           </td>
         </tr>
         <tr>
           <td>Task-5</td>
           <td>
-            <a href="JavaScript/JS_Task-5.html" target="_blank">Link-5</a>
+            <a href="Javascript/JS_Task-5.html" target="_blank">Link-5</a>
           </td>
         </tr>
         <tr>
           <td>Task-6</td>
           <td>
-            <a href="JavaScript/JS_Task-6.html" target="_blank">Link-6</a>
+            <a href="Javascript/JS_Task-6.html" target="_blank">Link-6</a>
           </td>
         </tr>
         <tr>
           <td>Task-7</td>
           <td>
-            <a href="JavaScript/JS_Task-7.html" target="_blank">Link-7</a>
+            <a href="Javascript/JS_Task-7.html" target="_blank">Link-7</a>
           </td>
         </tr>
         <tr>
           <td>Task-8</td>
           <td>
-            <a href="JavaScript/JS_Task-8.html" target="_blank">Link-8</a>
+            <a href="Javascript/JS_Task-8.html" target="_blank">Link-8</a>
           </td>
         </tr>
     </table>
