--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
           </td>
         </tr>
         <tr>
+          <th colspan="2">Javascript Tasks</th>
+        </tr>
+        <tr>
+            
           <td>Task-1</td>
           <td>
             <a href="Javascript/JS_Task-1.html" target="_blank">Link-1</a>
