--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
           <th colspan="2">Javascript Tasks</th>
         </tr>
         <tr>
-            
+          <th>Task Number</th>
+          <th>Link</th>
+        </tr>
+        <tr>
           <td>Task-1</td>
           <td>
             <a href="Javascript/JS_Task-1.html" target="_blank">Link-1</a>
